--- a/internal/app/templates/wiki.gohtml
+++ b/internal/app/templates/wiki.gohtml
@@ -69,7 +69,7 @@
     </main>
 </div>
 <footer>
-    EndlessWiki pages are generated on demand. Internal links will create new articles when visited.
+    EndlessWiki pages are generated on demand. Internal links will create new articles when visited. Built by <a href="https://www.seangoedecke.com">Sean Goedecke</a>.
 </footer>
 </body>
 </html>
