--- a/internal/app/templates/wiki.gohtml
+++ b/internal/app/templates/wiki.gohtml
@@ -60,6 +60,7 @@
             <li><a href="/wiki/main_page">Main page</a></li>
             <li><a href="/random">Random page</a></li>
             <li><a href="/recent">Most recent</a></li>
+            <li><a href="/constellation">Constellation map</a></li>
         </ul>
     </aside>
     <main id="content">
