--- a/internal/app/templates/wiki.gohtml
+++ b/internal/app/templates/wiki.gohtml
@@ -70,7 +70,7 @@
     </main>
 </div>
 <footer>
-    EndlessWiki pages are generated on demand. Internal links will create new articles when visited. Built by <a href="https://www.seangoedecke.com">Sean Goedecke</a>.
+    EndlessWiki pages are generated on demand. Internal links will create new articles when visited (currently paused because some jerk is scripting against the site). Built by <a href="https://www.seangoedecke.com">Sean Goedecke</a>.
 </footer>
 </body>
 </html>
